<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_career"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_career" />

    <item
    android:id="@+id/navigation_notice"
    android:icon="@drawable/ic_notifications_black_24dp"
    android:title="@string/title_notice" />

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_profile" />

</menu>
